--- a/gemini-tutorial-multiModal/style.css
+++ b/gemini-tutorial-multiModal/style.css
@@ -20,12 +20,18 @@ section {
         background-color: #e9e9e9;
         border-radius: 8px;
         line-height: 2;
+        display: flex;
+        flex-flow: row wrap;
+        gap: 1em;
 
-        & input[type="text"] {
-            appearance: none;
-            border: 1px solid #333;
-            border-radius: 4px;
-            padding-left: .5em;
+        & textarea {
+            line-height: 1.6;
+        }
+
+        & p,
+        & input[type="file"] {
+            width: 100%;
+            margin: 0;
         }
 
         & button {
